# sit

./: LICENSE  README.md  compose.yaml  construction-lifecycle.md  experiment.md  pyproject.toml  semantic-index-types.md  sit-field-writer.md
.agents/scripts/: building_block.py
sit/: experiment.py  scoring.py
sit/prompts/: README.md
sit/schemas/: baseline.py  misleading.py  results.py  vacuous.py
